@@ -21,8 +21,8 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
+import org.springframework.beans.factory.BeanFactory;
 import org.springframework.beans.factory.SmartInitializingSingleton;
 import org.springframework.cache.CacheManager;
 import org.springframework.cache.interceptor.CacheAspectSupport;
@@ -49,10 +49,11 @@ import org.springframework.util.ReflectionUtils;
  * The {@link AbstractRequestHandlerAdvice} implementation for caching
  * {@code AbstractReplyProducingMessageHandler.RequestHandler#handleRequestMessage(Message)} results.
  * Supports all the cache operations - cacheable, put, evict.
- * By default only cacheable is applied for the provided {@code cacheNames}.
+ * By default, only cacheable is applied for the provided {@code cacheNames}.
  * The default cache {@code key} is {@code payload} of the request message.
  *
  * @author Artem Bilan
+ * @author Ngoc Nhan
  *
  * @since 5.2
  *
@@ -102,9 +103,6 @@ public class CacheRequestHandlerAdvice extends AbstractRequestHandlerAdvice
 	 */
 	public CacheRequestHandlerAdvice(String... cacheNamesArg) {
 		this.cacheNames = cacheNamesArg != null ? Arrays.copyOf(cacheNamesArg, cacheNamesArg.length) : null;
-		CacheableOperation.Builder builder = new CacheableOperation.Builder();
-		builder.setName(toString());
-		this.cacheOperations.add(builder.build());
 	}
 
 	/**
@@ -191,6 +189,11 @@ public class CacheRequestHandlerAdvice extends AbstractRequestHandlerAdvice
 
 	@Override
 	protected void onInit() {
+		if (this.cacheOperations.isEmpty()) {
+			CacheableOperation.Builder builder = new CacheableOperation.Builder();
+			builder.setName(toString());
+			this.cacheOperations.add(builder.build());
+		}
 		List<CacheOperation> cacheOperationsToUse;
 		if (!ObjectUtils.isEmpty(this.cacheNames)) {
 			cacheOperationsToUse =
@@ -198,8 +201,7 @@ public class CacheRequestHandlerAdvice extends AbstractRequestHandlerAdvice
 							.filter((operation) -> ObjectUtils.isEmpty(operation.getCacheNames()))
 							.map((operation) -> {
 								CacheOperation.Builder builder;
-								if (operation instanceof CacheableOperation) {
-									CacheableOperation cacheableOperation = (CacheableOperation) operation;
+								if (operation instanceof CacheableOperation cacheableOperation) {
 									CacheableOperation.Builder cacheableBuilder = new CacheableOperation.Builder();
 									cacheableBuilder.setSync(cacheableOperation.isSync());
 									String unless = cacheableOperation.getUnless();
@@ -208,9 +210,8 @@ public class CacheRequestHandlerAdvice extends AbstractRequestHandlerAdvice
 									}
 									builder = cacheableBuilder;
 								}
-								else if (operation instanceof CacheEvictOperation) {
+								else if (operation instanceof CacheEvictOperation cacheEvictOperation) {
 									CacheEvictOperation.Builder cacheEvictBuilder = new CacheEvictOperation.Builder();
-									CacheEvictOperation cacheEvictOperation = (CacheEvictOperation) operation;
 									cacheEvictBuilder.setBeforeInvocation(cacheEvictOperation.isBeforeInvocation());
 									cacheEvictBuilder.setCacheWide(cacheEvictOperation.isCacheWide());
 									builder = cacheEvictBuilder;
@@ -233,14 +234,15 @@ public class CacheRequestHandlerAdvice extends AbstractRequestHandlerAdvice
 								builder.setKeyGenerator(operation.getKeyGenerator());
 								return builder.build();
 							})
-							.collect(Collectors.toList());
+							.toList();
 		}
 		else {
 			cacheOperationsToUse = this.cacheOperations;
 		}
 
-		this.delegate.setBeanFactory(getBeanFactory());
-		EvaluationContext evaluationContext = ExpressionUtils.createStandardEvaluationContext(getBeanFactory());
+		BeanFactory beanFactory = getBeanFactory();
+		this.delegate.setBeanFactory(beanFactory);
+		EvaluationContext evaluationContext = ExpressionUtils.createStandardEvaluationContext(beanFactory);
 		this.delegate.setKeyGenerator((target, method, params) ->
 				this.keyExpression.getValue(evaluationContext, params[0])); // NOSONAR
 		this.delegate.setCacheOperationSources((method, targetClass) -> cacheOperationsToUse);
@@ -261,7 +263,6 @@ public class CacheRequestHandlerAdvice extends AbstractRequestHandlerAdvice
 					else {
 						return result;
 					}
-
 				};
 
 		return this.delegate.invoke(operationInvoker, target, message);
